--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,20 @@
 			<artifactId>javautils</artifactId>
 			<version>0.8.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-core</artifactId>
+			<version>2.2.16.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-servlet</artifactId>
+			<version>2.2.16.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-websockets-jsr</artifactId>
+			<version>2.2.16.Final</version>
+		</dependency>
 	</dependencies>
 </project>
