--- a/config.json
+++ b/config.json
@@ -15,6 +15,8 @@
 		{
 			"name": "S5_Roedau_Sued",
 			"displayName": "S5 Rödau Süd",
+			"operator": null,
+			"driver": null,
 			"departure": "16:05",
 			"delay": 0,
 			"stations": [
