--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>JavaUtils</groupId>
 			<artifactId>javautils</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>io.undertow</groupId>
