--- a/pom.xml
+++ b/pom.xml
@@ -33,17 +33,24 @@
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
+							<appendAssemblyId>false</appendAssemblyId>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>maven-repository</id>
+			<url>https://maven.pkg.github.com/Der-Zauberer/JavaUtils</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>JavaUtils</groupId>
 			<artifactId>javautils</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.2.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>io.undertow</groupId>
